# django-testimonials

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  ruff.toml  setup.py  update_contributors.py
.github/workflows/: update_contributors.yml
docs/: admin.md  api.md  configuration.md  contributing.md  customization.md  deployment.md  index.md  installation.md  performance.md  signals.md  usage.md
testimonials/: __init__.py  admin.py  apps.py  conf.py  constants.py  exceptions.py  fields.py  forms.py  managers.py  signals.py  tasks.py  urls.py  utils.py  validators.py
testimonials/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
testimonials/dashboard/: urls.py  views.py
testimonials/migrations/: 0001_initial.py
testimonials/mixins/: __init__.py  manager_mixins.py  validation_mixins.py
testimonials/models/: __init__.py  base.py  testimonial.py
testimonials/services/: __init__.py  cache_service.py  task_executor.py
testimonials/templates/testimonials/admin/testimonials/: reject_testimonials.html
testimonials/templates/testimonials/dashboard/: analytics.html  base.html  categories.html  moderation.html  overview.html
testimonials/templates/testimonials/emails/: new_testimonial_body.html  new_testimonial_body.txt  new_testimonial_subject.txt  testimonial_approved_body.html  testimonial_approved_body.txt  testimonial_approved_subject.txt  testimonial_rejected_body.html  testimonial_rejected_body.txt  testimonial_rejected_subject.txt  testimonial_response_body.html  testimonial_response_body.txt  testimonial_response_subject.txt
testimonials/templates/testimonials/widgets/: star_rating.htm
testimonials/tests/: test_admin.py  test_api_views.py  test_cache_service.py  test_dashboard_views.py  test_fields.py  test_filters.py  test_forms.py  test_manager_mixins.py  test_managers.py  test_model.py  test_permissions.py  test_serializers.py  test_signals.py  test_task_executor.py  test_tasks.py  test_templates.py  test_utils.py  test_validation_mixins.py  test_validators.py
tests/: conftest.py  factories.py  settings.py  test_api.py  test_forms.py  test_managers.py  test_model.py  test_models.py  test_utils.py  test_validators.py  urls.py
